fix centering of logo on mobile

--- a/public/style/custom.css
+++ b/public/style/custom.css
@@ -478,7 +478,7 @@ section {
 }
 
 #misc0nfigLogo {
-	margin: 20px;
+	margin: 20px auto;
 	min-height: 0;
 }
 
